@@ -4,6 +4,7 @@
 
   * Fix support for params with arrays in multipart forms (Joel Chippindale)
   * Add respond_to? to Rack::Test::UploadedFile to match method_missing (Josh Nichols)
+  * Set the Referer header on requests issued by follow_redirect! (Ryan Bigg)
 
 == 0.6.0 / 2011-05-03
 
